<resources>
    <string name="app_name">App3-MDC</string>
    <string name="action_settings">Settings</string>
    <string name="tv_text_description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
        The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using Content here, content here, making it look like readable English.</string>
    <string name="add_button">add_button</string>
    <string name="btn_text_buy">Comprar</string>
    <string name="btn_text_skip">Saltar</string>
    <string name="tv_text_title">Black Friday!</string>
    <string name="et_text_image_url">Image URL</string>
    <string name="et_text_password">Password</string>
    <string name="helper_text_required">required</string>
    <string name="card_enable_pass">Activar password</string>
    <string name="card_toggle_red">Rojo</string>
    <string name="card_toggle_blue">Azul</string>
    <string name="card_toggle_green">Verde</string>
    <string name="message_action_success">Evento exitroso!</string>
    <string name="card_buying">Comprado</string>
    <string name="to_go">Ir</string>
    <string name="card_historial">Historial</string>
    <string name="card_required">Campo requerido</string>
    <string name="card_invalid_url">URL Invalida</string>
</resources>