<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ScrollingActivity"
    tools:showIn="@layout/activity_scrolling">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min"
            android:clickable="true"
            android:focusable="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/common_padding_default"
                android:paddingStart="@dimen/common_padding_default"
                android:paddingEnd="@dimen/common_padding_default">

                <!--importantForAccessibility: para que no solicite el content
                description -->
                <ImageView
                    android:id="@+id/imgCard"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    app:layout_constraintStart_toStartOf="parent"
                    android:src="@mipmap/ic_launcher"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_buy"
                    android:layout_marginTop="@dimen/common_padding_min"
                    app:icon="@drawable/ic_shop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/imgCard"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_skip"
                    android:layout_marginEnd="@dimen/common_padding_min"
                    app:layout_constraintEnd_toStartOf="@id/btnBuy"
                    app:layout_constraintTop_toTopOf="@id/btnBuy"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>

                <!--textAppearance: sirve para definir una apariencia para el text
                usando las definidas y recomendadas para estos casos -->
                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_marginStart="@dimen/common_padding_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgCard"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:maxLines="2"
                    android:textAppearance="?attr/textAppearanceBody1"
                    android:ellipsize="end"
                    android:text="@string/tv_text_description"
                    app:layout_constraintBottom_toBottomOf="@+id/imgCard"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitle"
                    app:layout_constraintStart_toStartOf="@+id/tvTitle"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_padding_min"
            android:layout_marginTop="@dimen/common_padding_min"
            android:layout_marginStart="@dimen/common_padding_min"
            android:layout_marginEnd="@dimen/common_padding_min">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/common_padding_min">

                <!--importantForAccessibility: para que no solicite el content
                description -->
                <ImageView
                    android:id="@+id/imgCover"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/card_img_cover_height"
                    android:background="@color/design_default_color_secondary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:importantForAccessibility="no"/>

                <TextView
                    android:id="@+id/tvTitleAlt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_text_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_margin="@dimen/common_padding_default"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgCover" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUri"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/et_text_image_url"
                    app:endIconMode="clear_text"
                    app:helperText="@string/helper_text_required"
                    app:errorEnabled="true"
                    app:layout_constraintEnd_toEndOf="@+id/tvTitleAlt"
                    app:layout_constraintStart_toStartOf="@+id/tvTitleAlt"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitleAlt"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etUri"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPass"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    android:enabled="false"
                    android:hint="@string/et_text_password"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/helper_text_required"
                    app:layout_constraintEnd_toEndOf="@+id/tilUri"
                    app:layout_constraintStart_toStartOf="@+id/tilUri"
                    app:layout_constraintTop_toBottomOf="@+id/tilUri">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEnableInputPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_enable_pass"
                    app:layout_constraintStart_toStartOf="@+id/tilPass"
                    app:layout_constraintTop_toBottomOf="@+id/tilPass" />

                <!--app:singleSelection="true" para seleccionar solo una opción -->
                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/toggle_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_default"
                    app:singleSelection="true"
                    app:layout_constraintTop_toBottomOf="@id/cbEnableInputPass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <Button
                        android:id="@+id/btnRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_toggle_red"
                        style="?attr/materialButtonOutlinedStyle"/>

                    <Button
                        android:id="@+id/btnBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_toggle_blue"
                        style="?attr/materialButtonOutlinedStyle"/>

                    <Button
                        android:id="@+id/btnGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/card_toggle_green"
                        style="?attr/materialButtonOutlinedStyle"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/design_default_color_primary"
                    android:layout_marginTop="@dimen/common_padding_middle"
                    android:layout_marginBottom="@dimen/common_padding_middle"
                    app:layout_constraintTop_toBottomOf="@id/toggle_button"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnTest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_text_skip"
                    android:layout_marginTop="@dimen/common_padding_min"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    app:layout_constraintEnd_toEndOf="@id/tilPass"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>